--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -16,7 +16,7 @@ newick==1.3.1
 numpy==1.21.4
 packaging==21.3
 phylogemetric==1.1.0
-Pillow==8.4.0
+Pillow>=9.0.0
 pybtex==0.24.0
 pycldf==1.24.0
 pyedictor==0.4
